# psyop

./: .coveragerc  .gitignore  LICENSE  README.rst  pyproject.toml
.github/workflows/: docs.yml  publish.yml  testing.yml
docs/: conf.py  index.rst
psyop/: __init__.py  main.py  model.py  opt.py  util.py  viz.py
tests/: test_apps.py  test_main.py  test_model.py  test_opt.py  test_regression.py  test_viz.py
tests/test-data/: quadratic.nc  quadratic2D.nc  trials.csv  trials.nc
